--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sheeptech",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://omar2811.github.io/sheeptech",
+  "homepage": "https://omar2811.github.io/sheepTech",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
